plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.Remitly.swift'
version = '0.0.1-SNAPSHOT'

bootJar {
	archiveFileName = 'app.jar'
}

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'mysql:mysql-connector-java:8.0.27'
	implementation 'com.h2database:h2'

	implementation 'com.opencsv:opencsv:5.7.1'

	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
}

tasks.named('test') {
	useJUnitPlatform()
}

task compileAndTest(type: GradleBuild) {
	tasks = ['clean', 'build', 'test']
}

task runDockerCompose(type: Exec, 'dependsOn': compileAndTest) {
	workingDir '.'
	commandLine 'docker-compose', 'up', '--build', '-d'
}

task deploy(dependsOn: runDockerCompose) {
	doLast {
		println "Deployment successful!"
	}
}

task stopDockerCompose(type: Exec) {
	workingDir '.'
	commandLine 'docker-compose', 'stop'
}

task stop(dependsOn: stopDockerCompose) {
	doLast {
		println "Stopping services..."
	}
}

jar {
	enabled = false
}
